# bonjin_ATS_helper

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  ats_mock_requirements.md  ats_rust_client_requirements_v2.md  deny.toml
.github/workflows/: licenses.yml
src/: lib.rs
src/auth/: credential.rs  mod.rs  sas.rs  shared_key.rs  token.rs
src/backend/: http.rs  mock.rs  mod.rs
src/client/: if_match.rs  mod.rs  options.rs  service_client.rs  table_client.rs
src/codec/: datetime.rs  deserialize.rs  edm.rs  mod.rs  serialize.rs
src/entity/: dynamic_entity.rs  mod.rs  property.rs  system_properties.rs  traits.rs
src/error/: mod.rs
src/http/: mod.rs  reqwest_client.rs  response.rs
src/mock/: mod.rs
src/query/: builder.rs  continuation.rs  filter.rs  mod.rs  page.rs  select.rs
src/request/: canonicalization.rs  headers.rs  mod.rs  pipeline.rs  prepared_request.rs
src/validation/: key.rs  limits.rs  mod.rs  property.rs  table_name.rs
tests/: azurite_integration.rs  cloud_conformance.rs  http_black_box.rs  mock_backend.rs  mock_real_comparison.rs
