[package]
name = "bonjin_ATS_helper"
version = "0.1.0"
edition = "2024"

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
base64 = "0.22"
bytes = "1"
http = "1"
hmac = "0.12"
indexmap = { version = "2", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1", features = ["sync"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
zeroize = "1"

[dev-dependencies]
assert_matches = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
wiremock = "0.6"
